--- a/.github/workflows/helm-release.yaml
+++ b/.github/workflows/helm-release.yaml
@@ -17,6 +17,7 @@ env:
   CHART_PATH: deploy/helm/slar
   # Optional: set repository variable HELM_REGISTRY to your OCI registry base (e.g., ghcr.io/<owner>/charts).
   # If not set, we'll default to ghcr.io/<repo_owner>/charts.
+  GITHUB_TOKEN: ${{ github.token }}
 
 jobs:
 
@@ -38,12 +39,14 @@ jobs:
       - name: Resolve Helm OCI Repo
         id: resolve_repo
         run: |
-            echo "helm_repo=oci://ghcr.io/${{ github.repository_owner }}/charts" >> $GITHUB_OUTPUT
+          OWNER="${{ github.repository_owner }}"
+          OWNER_LC=$(echo "$OWNER" | tr '[:upper:]' '[:lower:]')
+          echo "helm_repo=oci://ghcr.io/${OWNER_LC}/charts" >> $GITHUB_OUTPUT
 
       - name: Get Chart Name
         id: get_chart_name
         run: |
-          chart_name=$(grep '^name:' deploy/helm/slar/Chart.yaml | awk '{print $2}')
+          chart_name=$(grep '^name:' "${CHART_PATH}/Chart.yaml" | awk '{print $2}')
           echo "chart_name=${chart_name}" >> $GITHUB_OUTPUT
 
       - name: Get Chart Version
