--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   ai:
     container_name: slar-ai
     build:
-      context: ../api/ai
+      context: ../../api/ai
     # image: slar-ai:latest
     ports:
       - "8002:8002"
@@ -16,7 +16,7 @@ services:
   api:
     container_name: slar-api
     build:
-      context: ../api
+      context: ../../api
     # image: slar-api:latest
     ports:
       - "8080:8080"
@@ -31,7 +31,7 @@ services:
   worker:
     container_name: slar-worker
     build:
-      context: ../api
+      context: ../../api
     image: slar-api:latest
     command: ["./worker"]
     environment:
@@ -49,7 +49,7 @@ services:
   slack-worker:
     container_name: slar-slack-worker
     build:
-      context: ../api/workers
+      context: ../../api/workers
     # image: slar-slack-worker:latest
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@db:5432/postgres?sslmode=disable}
@@ -66,7 +66,7 @@ services:
   web:
     container_name: slar-web
     build:
-      context: ../web/slar
+      context: ../../web/slar
     # image: slar-web:latest
     ports:
       - "3000:3000"
