--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -5,8 +5,6 @@ services:
     container_name: slar-ai
     build:
       context: ../../api/ai
-    # image: slar-ai:latest
-    # Không expose port ra ngoài - chỉ truy cập qua Kong
     expose:
       - "8002"
     environment:
@@ -20,8 +18,6 @@ services:
     container_name: slar-api
     build:
       context: ../../api
-    # image: slar-api:latest
-    # Không expose port ra ngoài - chỉ truy cập qua Kong
     expose:
       - "8080"
     environment:
@@ -42,9 +38,6 @@ services:
     command: ["./worker"]
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@db:5432/postgres?sslmode=disable}
-      - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-your-slack-bot-token}
-      - SLACK_APP_TOKEN=${SLACK_APP_TOKEN:-your-slack-app-token}
-      - API_BASE_URL=http://api:8080
       - POLL_INTERVAL=1
       - BATCH_SIZE=10
       - MAX_RETRIES=3
@@ -58,7 +51,6 @@ services:
     container_name: slar-slack-worker
     build:
       context: ../../api/workers
-    # image: slar-slack-worker:latest
     environment:
       - DATABASE_URL=${DATABASE_URL:-postgres://postgres:postgres@db:5432/postgres?sslmode=disable}
       - SLACK_BOT_TOKEN=${SLACK_BOT_TOKEN:-your-slack-bot-token}
@@ -77,19 +69,11 @@ services:
     container_name: slar-web
     build:
       context: ../../web/slar
-    # image: slar-web:latest
-    # Không expose port ra ngoài - chỉ truy cập qua Kong
     expose:
       - "3000"
     environment:
       - NEXT_PUBLIC_SUPABASE_URL=${NEXT_PUBLIC_SUPABASE_URL:-http://localhost:8000}
       - NEXT_PUBLIC_SUPABASE_ANON_KEY=${NEXT_PUBLIC_SUPABASE_ANON_KEY:-your-supabase-anon-key}
-      # Truy cập API qua Kong
-      - NEXT_PUBLIC_API_URL=http://localhost:8000/api
-      - NEXT_PUBLIC_WS_URL=ws://localhost:8000/ws/chat
-      - NEXT_PUBLIC_APP_NAME=SLAR
-      - NEXT_PUBLIC_APP_URL=http://localhost:8000
-      - NEXT_PUBLIC_AI_BASE_URL=http://localhost:8000/ai
     depends_on:
       - api
     restart: unless-stopped
@@ -100,10 +84,9 @@ services:
     container_name: kong
     image: kong:2.8.1
     ports:
-      # Chỉ expose Kong port - đây là entry point duy nhất
       - "8000:8000/tcp"
       - "8443:8443/tcp"
-      # Admin API (optional - để quản lý Kong)
+      # Admin API (optional - kong admin)
       - "8001:8001/tcp"
     volumes:
       - ./volumes/api/kong.yaml:/home/kong/temp.yml:ro,z
@@ -115,8 +98,6 @@ services:
       KONG_PLUGINS: request-transformer,cors,key-auth,acl,basic-auth
       KONG_NGINX_PROXY_PROXY_BUFFER_SIZE: 160k
       KONG_NGINX_PROXY_PROXY_BUFFERS: 64 160k
-      SUPABASE_ANON_KEY: ${SUPABASE_ANON_KEY:-your-supabase-anon-key}
-      SUPABASE_SERVICE_KEY: ${SUPABASE_SERVICE_KEY:-your-supabase-service-key}
       DASHBOARD_USERNAME: ${DASHBOARD_USERNAME:-admin}
       DASHBOARD_PASSWORD: ${DASHBOARD_PASSWORD:-admin}
     depends_on:
