--- a/deploy/docker/docker-compose.yaml
+++ b/deploy/docker/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
       context: ../../api/ai
     expose:
       - "8002"
+    ports:
+      - "8002:8002"
     environment:
       - PORT=8002
       - OPENAI_API_KEY=${OPENAI_API_KEY:-your-openai-api-key}
@@ -20,12 +22,15 @@ services:
       context: ../../api
     expose:
       - "8080"
+    ports:
+      - "8080:8080"
     environment:
       - PORT=8080
       - DATABASE_URL=${DATABASE_URL}
       - SUPABASE_URL=${SUPABASE_URL}
       - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY:-your-supabase-anon-key}
       - SUPABASE_JWT_SECRET=${SUPABASE_JWT_SECRET:-your-supabase-jwt-secret}
+      - SLAR_ENV=production
     restart: unless-stopped
     networks:
       - slar-network
