feat/datadog-implement

--- a/api/ai/Dockerfile
+++ b/api/ai/Dockerfile
@@ -5,10 +5,13 @@ WORKDIR /app
 ENV PYTHONDONTWRITEBYTECODE=1 \
     PYTHONUNBUFFERED=1 \
     PIP_DISABLE_PIP_VERSION_CHECK=1 \
-    PIP_NO_CACHE_DIR=1
+    PIP_NO_CACHE_DIR=1 \
+    DATA_STORE=/data
 
 # System deps for SSL and building psycopg2 (pg_config comes from libpq-dev)
-RUN apt-get update && apt-get install -y --no-install-recommends ca-certificates build-essential libpq-dev && rm -rf /var/lib/apt/lists/*
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends ca-certificates build-essential libpq-dev && rm -rf /var/lib/apt/lists/* \
+    && mkdir -p /data
 
 COPY requirements.txt .
 RUN pip install --upgrade pip && pip install -r requirements.txt
